[docs] authentication docs
https://issues.couchbase.com/browse/DOC-3397

--- a/docs/modules/ROOT/pages/swift.adoc
+++ b/docs/modules/ROOT/pages/swift.adoc
@@ -856,6 +856,43 @@ related to replication with Sync Gateway.
 include::{examplesdir}/SampleCodeTest.swift[tags=replication-logging]
 ----
 
+=== Authentication
+
+By default, Sync Gateway does not enable authentication. This is to make it easier to get up and running with synchronization. You can enable authentication with the following properties in the configuration file:
+
+[source,json]
+----
+{
+  "databases": {
+    "mydatabase": {
+      "users": {
+        "GUEST": {"disabled": true}
+      }
+    }
+  }
+}
+----
+
+To authenticate with Sync Gateway, an associated user must first be created. Sync Gateway users can be created through the link:../references/sync-gateway/admin-rest-api/index.html?v=2.0#/user/post__db___user_[`POST /{db}/_user`] endpoint on the Admin REST API. Provided that the user exists on Sync Gateway, there are two ways to authenticate from a Couchbase Lite client: Basic Authentication or Session Authentication.
+
+==== Basic Authentication
+
+You can provide a user name and password to the basic authenticator class method. Under the hood, the replicator will send the credentials in the first request to retrieve a `SyncGatewaySession` cookie and use it for all subsequent requests during the replication. This is the recommended way of using basic authentication. The following example initiates a one-shot replication as the user *john* with the password *pass*.
+
+[source,swift]
+----
+include::{examplesdir}/SampleCodeTest.swift[tags=basic-authentication]
+----
+
+==== Session Authentication
+
+Session authentication is another way to authenticate with Sync Gateway. A user session must first be created through the link:../references/sync-gateway/rest-api/index.html#/session/post__db___session[`POST /{db}/_session`] endpoint on the Public REST API. The HTTP response contains a session ID which can then be used to authenticate as the user it was created for. The following example initiates a one-shot replication with the session ID that is returned from the `POST /{db}/_session` endpoint.
+
+[source,swift]
+----
+include::{examplesdir}/SampleCodeTest.swift[tags=session-authentication]
+----
+
 === Replication Status
 
 The `replication.status.activity` property can be used to check the
