--- a/docs/modules/ROOT/pages/swift.adoc
+++ b/docs/modules/ROOT/pages/swift.adoc
@@ -30,7 +30,22 @@ import CouchbaseLiteSwift
 ==== Carthage
 
 1.  https://github.com/Carthage/Carthage#installing-carthage[Install Carthage]
-2.  Add `github "couchbase/couchbase-lite-ios" "2.0DB023"` to your *Cartfile*.
+2.  In your *Cartfile*, add the following.
++
+*Couchbase Lite Community Edition*
++
+[source,ruby]
+----
+binary "https://raw.githubusercontent.com/couchbase/couchbase-lite-ios/master/Carthage/CouchbaseLite-Community.json" ~> 2.0.0
+----
++
+*Couchbase Lite Enterprise Edition*
++
+[source,ruby]
+----
+binary "https://raw.githubusercontent.com/couchbase/couchbase-lite-ios/master/Carthage/CouchbaseLite-Enterprise.json" ~> 2.0.0
+----
++
 3.  Run `carthage update --platform ios`.
 4.  Drag *CouchbaseLiteSwift.framework* from *Carthage/Build/* to the Xcode navigator.
 5.  Click on Project > General > Embedded Binary and add *CouchbaseLiteSwift.framework* to this section.
@@ -57,7 +72,7 @@ end
 ----
 target '<your target name>' do
   use_frameworks!
-  pod 'CouchbaseLiteSwift-EE', '~> 2.0.0'
+  pod 'CouchbaseLiteSwift-Enterprise', '~> 2.0.0'
 end
 ----
 +
