--- a/docs/modules/ROOT/pages/swift.adoc
+++ b/docs/modules/ROOT/pages/swift.adoc
@@ -1076,6 +1076,11 @@ include::{examplesdir}/SampleCodeTest.swift[tags=certificate-pinning]
 This example loads the certificate from the application sandbox, then
 converts it to the appropriate type to configure the replication object.
 
+== Thread Safety
+
+The Couchbase Lite API is thread safe except for calls to mutable objects:
+`MutableDocument`, `MutableDictionary` and `MutableArray`.
+
 == Release Notes
 
 *Bugs*
