--- a/docs/modules/ROOT/pages/swift.adoc
+++ b/docs/modules/ROOT/pages/swift.adoc
@@ -192,6 +192,17 @@ can be used to provide specific options in the
 http://docs.couchbase.com/mobile/2.0/couchbase-lite-swift/db022/Classes/DatabaseConfiguration.html[`DatabaseConfiguration`]
 object such as the database directory.
 
+=== Database Encryption
+
+Couchbase Lite 2.1 introduces database encryption, this functionality is only available in the Enterprise Edition.
+
+The code below opens or create an existing database with the specified encryption key. Note that this example will not compile if you are running the Community Edition of Couchbase Lite.
+
+[source,swift]
+----
+include::{examplesdir}/SampleCodeTest.swift[tags=database-encryption]
+----
+
 === Finding a Database File
 
 When the application is running on the iOS simulator, you can locate the application's sandbox directory using the https://simpholders.com/3/[SimPholders] utility.
