[docs] replication checkpoints

--- a/docs/modules/ROOT/pages/swift.adoc
+++ b/docs/modules/ROOT/pages/swift.adoc
@@ -1011,6 +1011,17 @@ Couchbase Lite replicator and thus will trigger a connection retry.
 - `504`: Gateway Timeout
 - `1001`: DNS resolution error
 
+=== Replication Checkpoints
+
+Checkpoints are used by the replicator to keep track of documents that are sent to the target database. Without checkpoints, Couchbase Lite would send the entire database content every time it connects to the target database, even though the target database may already have the majority of the database content from previous replications.
+
+This functionality is generally not a concern to application developers. But if you require the replication to start again from zero then you may call the checkpoint reset method before starting the replicator.
+
+[source,swift]
+----
+include::{examplesdir}/SampleCodeTest.swift[tags=replication-reset-checkpoint]
+----
+
 == Handling Conflicts
 
 In Couchbase Lite 2.0, document conflicts are automatically resolved. This
